--- a/client/src/components/HomePage/ConfirmModal/ConfirmModal.css
+++ b/client/src/components/HomePage/ConfirmModal/ConfirmModal.css
@@ -6,7 +6,7 @@
 	top: -18vh !important;
 }
 .modal-header {
-	border-bottom: 0 none;
+	border-bottom: 0 solid rgb(0, 0, 0, 0) !important;
 }
 
 .confirm-button {
@@ -14,7 +14,7 @@
 }
 
 .modal-footer {
-	border-top: 0 none;
+	border-top: 0 solid rgb(0, 0, 0, 0) !important;
 }
 
 .dark-mode-close .close {
